# DataEngineeringTask

./: .gitignore  README.md  pyproject.toml
data/processed/: cleaned_atc.parquet
notebooks/: prep.ipynb
src/DataEngineeringTask/: config.py  data_processing.py  main.py  utils.py
