[tool.poetry]
name = "DataEngineeringTask"
version = "0.1.0"
description = ""
authors = ["Ekaterina Kuranova <kuranova988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
pandas = "^2.2.3"
thefuzz = "^0.22.1"
pyspark = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
